2009-04-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/PluginInterface.cpp (checkInputArity): Fix a segfault
	in case of empty inputType.

2009-04-06  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/testsuite/dlvhex/Makefile.am: Linking in libcurl for
	testing.

	* src/dlvhex/Makefile.am: Linking tested modules into
	libdlvhexbase instead of the dlvhex binary.

2009-03-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/GraphBuilder.cpp: Mark fresh auxiliary head AtomNodes as auxiliary.

	* include/dlvhex/AtomNode.h (AtomNode): Add setAux and isAux.
	* src/dlvhex/AtomNode.cpp: Likewise.

2009-01-28  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/DependencyGraph.cpp: Document code.
	* src/dlvhex/GuessCheckModelGenerator.cpp: Likewise.

2009-01-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/testsuite/dlvhex/TestPlugin.cpp (TestCAtom): Add &testC
	external atom.

	* examples/extatom8.hex: New unstratified testcase.

2008-12-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

2008-12-08  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

	* MAINTAINER-README: Add pkg-config to the list of dependencies.

	* include/dlvhex/DLVresultParserDriver.h: Move error message
	handling from the parser to the scanner.
	* src/dlvhex/DLVresultParser.ypp: Likewise.
	* src/dlvhex/DLVresultParserDriver.cpp: Likewise.
	* src/dlvhex/DLVresultScanner.lpp: Likewise.

	* include/dlvhex/ASPSolver.tcc: Provide better debug output in
	case of solver errors.
	* src/dlvhex/ProcessBuf.cpp: Likewise.

2008-12-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/ProcessBuf.cpp: g++ 4.3 introduced some backwards
	incompatibility <http://gcc.gnu.org/gcc-4.3/porting_to.html> for
	C-functions: #include cstring and cstdlib.
	* src/dlvhex/dlvhex.cpp: Likewise.

2008-11-13  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/GuessCheckModelGenerator.cpp: Do not create guessing