@@ -1,0 +1,18 @@
+% parser test
+parser0 :- &testZeroArity0[]().
+
+% parser test
+parser1 :- &testZeroArity0().
+
+% parser test
+parser2 :- &testZeroArity0[].
+
+% parser test
+parser3 :- &testZeroArity0.
+
+% success test
+success_ok :- &testZeroArity1.
+
+% failure test
+failure_ok :- not &testZeroArity0().
+
