@@ -13,3 +13,4 @@
 ../extatom4.hex extatom4.out
 ../extatom5.hex extatom5.out
 ../extatom6.hex extatom6.out
+../extatom9.hex extatom9.out
